# infra-challenge

./: .gitignore  README.md
solution/: .dockerignore  Cargo.toml  Dockerfile  README.md  app.py  build_start.sh  cmd.sh  convert_model.py  default  docker-compose.yaml  docker-compose.yml  gunicorn_conf.py  main.py  models.py  multiprocessing.ipynb  prometheus.yml  requirements.txt  setup.sh  start.sh  supervisord.conf  threading model calls.ipynb
solution/app/: Dockerfile  app.py  error_handler.py  inference.py  main.py  model_loader.py  requirements.txt  response_builder.py
solution/app/configs/: app_config.yaml  config.py
solution/app/handlers/: recognition.py
solution/app/infrastructure/: models.py
solution/config/: config.py  models.yaml
solution/configs/: app_config.yaml  config.py
solution/dev_parallel/: config.py  main_handler.py  responder.py  server.py  tasker.py  worker.py  worker1.py  worker10.py  worker2.py  worker3.py  worker5.py
solution/handlers/: recognition.py
solution/helm/: Dockerfile  app.py  inference.py  main.py  models.py  requirements.txt  values.yaml
solution/infrastructure/: models.py  optimizers.py
solution/mlops/: supervisord.conf
solution/requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
solution/scripts/: run_locust.sh  start.sh  upd-deps.sh
solution/src/: conf.py  main.py  main.rs  model.py  models.py  server.py  start.sh  utils.py
solution/tests/: locustfile.py
solution/triton-server/: Dockerfile  requirements.txt
solution/workspace/: models_list.yaml
(+71 files in other folders)
